--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: David Gay i Tello
 title: Engineering Manager
-email: david.gay.tello@gmail.com
+email: david.gay.tello@pm.me
 #phone: (+34) 607 761 767
 
 # Dark Mode (true/false/never)
