--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ favicon: images/favicon.ico
 
 # Personal info
 name: David Gay i Tello
-title: Softaware Engineer
+title: Software Engineer
 email: david.gay.tello@pm.me
 #phone: (+34) 607 761 767
 
