--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,9 @@
 - layout: left
+  company: Freelance Software Engineer
+  job_title: Self-employed
+  dates: January 2021 - Present
+
+- layout: left
   company: La Gavasenca, SCCL
   link: formatgeriadegavas.cat
   job_title: Partner
