--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username: davidgit
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I'm a software engineer currently living in the Pyrenees with over 16 years of experience working in small to midsize organizations, though what I enjoy the most is people management, enabling and empowering top engineers to shine.
+  I’m a software engineer with over 17 years of experience working in small to midsize organizations. What I enjoy the most is people management: enabling and empowering top engineers to shine.
 
 # Projects Section
 # projects_title: Projects
