--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - layout: left
   name: Facultat d'Informàtica de Barcelona
   dates: 1998 - 2005
-  qualification: Bachelor in Informatics Engineering
+  qualification: Bachelor's degree, Computer Science
   quote: >
     The Facultat d'Informàtica de Barcelona (FIB) is a pioneering school in university-level informatics in Spain and has been spearheading Catalonia’s progress in the field since 1977. It is one of the top 10 computer science schools in Europe.
   description: | # this will include new lines to allow paragraphs
