--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,7 +4,7 @@
   job_title: Engineering Manager
   dates: May 2021 - Present
   description: |
-   Managing two distributed teams within the Infrastructure Instrumentation organization in Europe. 
+   Managing two remote teams within the Infrastructure Instrumentation organization in Europe. 
    
    The Infrastructure organization develops and maintains instrumentation agents and integrations for a wide range of products, including Kubernetes, Cassandra, etc... All the development is open source, usually in Go, and we also contribute to other open source projects such as OpenTelemetry or some Prometheus Exporters.
    
