--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,16 +4,24 @@
   job_title: Engineering Manager
   dates: May 2021 - Present
   description: |
-   Managing two remote teams within the Infrastructure Instrumentation organization in Europe. 
-   
+   Managing two remote teams (12 direct reports) within the Infrastructure Instrumentation organization in Europe.
+
    The Infrastructure organization develops and maintains instrumentation agents and integrations for a wide range of products, including Kubernetes, Cassandra, etc... All the development is open source, usually in Go, and we also contribute to other open source projects such as OpenTelemetry or some Prometheus Exporters.
-   
+
    What I do:
-   - Lead two teams of high-performance software engineers.
-   - Ensure the success of software projects through the planning and execution phases within and across our group.
-   - Develop and iterate on processes and practices that keep our teams executing efficiently
-   - Recruit and develop engineering talent for high-productivity, quality focused, and distributed teams.
-   - Work closely with the product and architecture leadership to drive our teams priorities and roadmap.
+   - I improved retention on teams (no employee churn), focusing on strong human relationships where we care personally about each other while challenging directly when needed.
+   - I invest a lot of time in developing engineers. I coach engineers and deliver regular reviews. Although, I try to act more as a sponsor, looking for opportunities that might help them achieve their goals.
+   - I consolidated our Software Developer Life Cycle, to ensure the established processes were assumed by engineers and stakeholders, so engineers' frustration was reduced and productivity increased.
+     - Critical and High priority bugs are now fixed within SLA.
+     - Reducing Sprint scope, average resolution time has improved 2x.
+     - Using software to remove toil, the percentage of Support tickets that become an escalation has decreased by 70%.
+     - External contributions are now triaged within a week.
+   - I set the proper environment, so new projects are built taking testing and reliability carefully into account.
+   - I work closely with the product and architecture leadership to drive our teams priorities and roadmap. Some examples of teams' successful launches:
+     - [New Relic Kubernetes inregration v3](https://newrelic.com/blog/nerdlog/k8s-integration-v3), one of the biggest announcements during the last [FutureStack'22](https://newrelic.com/blog/nerdlog/futurestack-2022-recap).
+       [New Relic Prometheus Agent](https://docs.newrelic.com/docs/infrastructure/prometheus-integrations/install-configure-prometheus-agent/install-prometheus-agent/).
+     - New Prometheus based integrations like [IBM MQ](https://docs.newrelic.com/docs/infrastructure/host-integrations/host-integrations-list/ibmmq-monitoring-integration/) or [MongoDB]https://docs.newrelic.com/docs/infrastructure/host-integrations/host-integrations-list/mongodb/mongodb-monitoring-integration-new/).
+   - I enforce the team to keep some room for innovation and creativity through Innovation Days whose outcomes are shared and land on our roadmaps when appropriate.
 
 - layout: left
   company: La Gavasenca, SCCL
